@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-16T01:10:02Z",
+  "timestamp" : "2024-09-18T01:05:40Z",
   "count_outdated" : 238,
   "uniques_outdated" : 172,
-  "count" : 242,
-  "uniques" : 176,
+  "count" : 243,
+  "uniques" : 177,
   "clones" : [
     {
       "timestamp": "2024-09-14T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-09-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
