@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 4,
+  "count": 5,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-09-14T00:00:00Z",
@@ -9,6 +9,11 @@
     },
     {
       "timestamp": "2024-09-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
